# imgui_application

./: CMakeLists.txt  README.md  build_emscripten_lib.sh  build_emscripten_test_app.sh
include/imgui_app/: ImGui_Application.hpp
sources/: ImGui_Application.cpp
web_shell/: shell_minimal.html
